--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,12 @@
 asgiref==3.7.2
-Django==4.2.3
-django-cors-headers==4.2.0
+# Django==4.2.3
+Django==3.2.20
+# django-cors-headers==4.2.0
+django-cors-headers==4.1.0
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.2.2
-Pillow==10.0.0
+# Pillow==10.0.0
+Pillow==9.5.0
 PyJWT==2.8.0
 pytz==2023.3
 sqlparse==0.4.4
